Thu Nov  3 11:04:12 GMT 2011  Lee Noar  <leenoar@sky.com>

	* unix/getcwd.c (getcwd): Fix potential buffer overflow.
	getcwd() should set errno to ERANGE and return NULL if the size
	of the buffer supplied is too small for the path. It would
	appear that it relies on unixify() to do this, however, unixify()
	only checks for buffer overflow when the path does not require
	any processing. As RISC OS itself is supplying the path, then by
	default it will always require processing to unix format, so buffer
	overflow is never detected. Fix by adding an explicit check before
	calling unixify().

Tue Nov  1 21:42:53 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/ul_lseek.c (lseek): Change off_t into __off_t.
	(lseek64): Change off_t into __off64_t.  Add check on __off64_t
	into __off_t overflow.
	* scl/chunkid05.s: Remove wrong entry after scalbln.  Add entries
	from isblank to tmpfile64.
	* include/unixlib/buildoptions.h (__UNIXLIB_LFS64_SUPPORT): Add.
	* include/unixlib/types.h (__off_t): Fix for UnixLib case.
	(__off64_t): Define as __quad_t, not __loff_t.
	* include/sys/types.h (__loff_t): Remove.
	* include/sys/stat.h (off_t): Support __USE_FILE_OFFSET64 and
	__USE_LARGEFILE64.
	* include/stdio.h (off_t, fpos_t): Support __USE_FILE_OFFSET64 and
	__USE_LARGEFILE64.
	(fopen, freopen): Likewise.
	(fgetpos, fsetpos): Likewise.
	(ftell, fseek): Likewise.
	(tmpfile): Likewise.
	(TEMP_FAILURE_RETRY): Move to unistd.h.
	(fopen64, freopen64, fgetpos64, fsetpos64, ftello, fseeko,
	ftello64, fseeko64, tmpfile64): Add.
	* include/unistd.h (off_t): Support __USE_FILE_OFFSET64 and
	__USE_LARGEFILE64.
	(TEMP_FAILURE_RETRY): Add (changed version from stdio.h).

Sun Oct 30 20:34:23 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* include/errno.h (EILSEQ, EOVERFLOW, EFBIG): Reassigned values for
	SCL configuration to match recent ROOL CLib changes.
	(EPERM, ENOENT, ESRCH, EINTR, EIO, ENXIO): Reassigned values for
	SCL configuration to avoid aliasing other error values.